# llama-index-desearch

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
